--- a/style.css
+++ b/style.css
@@ -31,7 +31,7 @@
 }
 
 body {
-    background-image: linear-gradient(rgba(62, 20, 20, 0.4), rgba(62, 20, 20, 0.4)), url(pig.jpg);
+    background-image: linear-gradient(rgba(62, 20, 20, 0.4), rgba(62, 20, 20, 0.4)), url(Pics/pig.jpg);
     background-size: cover;
     background-position: center;
     font-family: Lato;
